Code-Todolist-application-with-React   Initial Version.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,55 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+body{
+background: rgb(79, 98, 142);
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.todoTopClass{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 15px;
+}
 
-*/
+h1{
+    font-size: 75px;
+    // color: rgb(6, 21, 57);
+    color: white;
+    font-weight: 700px;
+}
+
+.inputTodoClass{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+.todoListClass{
+    display: flex;
+    flex-direction: column;
+}
+
+.todoRow{
+    background: rgb(255, 227, 170);
+    border: solid 1px lightgrey;
+    margin: 0px 0px 1px 45px;
+    padding: 7px;
+    border-radius: 5px;
+}
+
+.todoRowComplete{
+    background:rgb(212, 177, 106);
+    border: solid 1px lightgrey;
+    text-decoration: line-through;
+    margin: 0px 0px 1px 45px;
+    padding: 7px;
+    border-radius: 5px;
+}
+
+.input-group {
+    width: 91% !important;
+}
+
+.optionButtonClass{
+    justify-content: left;
+}
